build_error_v15_utf8.log

> travelai-deals@0.1.0 build
> vite build --sourcemap

[36mvite v5.0.0 [32mbuilding for production...[36m[39m
transforming...
node.exe : [baseline-
browser-mapping] The 
data in this module 
is over two months 
old.  To ensure 
accurate Baseline 
data, please update: 
`npm i baseline-brows
er-mapping@latest -D`
At C:\Program Files\n
odejs\npm.ps1:29 
char:3
+   & $NODE_EXE 
$NPM_CLI_JS $args
+   ~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: ([baseli   
 ne-brows...ping@    
latest -D`:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
Error processing 
file src\components\u
i\Select.jsx: 
SyntaxError: 
Unexpected token 
(15:19)
    at constructor (C
:\Users\iulia\travela
i_deals\node_modules\
@babel\parser\lib\ind
ex.js:367:19)
    at TypeScriptPars
erMixin.raise (C:\Use
rs\iulia\travelai_dea
ls\node_modules\@babe
l\parser\lib\index.js
:6624:19)
    at TypeScriptPars
erMixin.unexpected (C
:\Users\iulia\travela
i_deals\node_modules\
@babel\parser\lib\ind
ex.js:6644:16)
    at TypeScriptPars
erMixin.parseIdentifi
erName (C:\Users\iuli
a\travelai_deals\node
_modules\@babel\parse
r\lib\index.js:12277:
12)
    at TypeScriptPars
erMixin.parseIdentifi
er (C:\Users\iulia\tr
avelai_deals\node_mod
ules\@babel\parser\li
b\index.js:12255:23)
    at TypeScriptPars
erMixin.parseBindingA
tom (C:\Users\iulia\t
ravelai_deals\node_mo
dules\@babel\parser\l
ib\index.js:7383:17)
    at TypeScriptPars
erMixin.parseBindingA
tom (C:\Users\iulia\t
ravelai_deals\node_mo
dules\@babel\parser\l
ib\index.js:9995:18)
    at TypeScriptPars
erMixin.parseMaybeDef
ault (C:\Users\iulia\
travelai_deals\node_m
odules\@babel\parser\
lib\index.js:7471:39)
    at TypeScriptPars
erMixin.parseMaybeDef
ault (C:\Users\iulia\
travelai_deals\node_m
odules\@babel\parser\
lib\index.js:10025:24
)
    at TypeScriptPars
erMixin.parseBindingE
lement (C:\Users\iuli
a\travelai_deals\node
_modules\@babel\parse
r\lib\index.js:9170:2
3) {
  code: 'BABEL_PARSER
_SYNTAX_ERROR',
  reasonCode: 
'UnexpectedToken',
  loc: Position { 
line: 15, column: 
19, index: 417 },
  pos: 417,
  syntaxPlugin: 
undefined
}
[32mΓ£ô[39m 123 modules transformed.
[31m[vite:esbuild] 
Transform failed 
with 1 error:
C:/Users/iulia/travel
ai_deals/src/componen
ts/ui/Select.jsx:15:1
9: ERROR: Expected 
identifier but found 
"\"components.ui.Sele
ct.select_an_option\"
"[39m
file: [36mC:/Users/i
ulia/travelai_deals/s
rc/components/ui/Sele
ct.jsx:15:19[39m
[33m
[33mExpected 
identifier but found 
"\"components.ui.Sele
ct.select_an_option\"
"[33m
13 |      value,
14 |      
defaultValue,
15 |      placeholder
={t("components.ui.Se
lect.select_an_option
")},
   |                 
    ^
16 |      multiple = 
false,
17 |      disabled = 
false,
[39m
[31merror during 
build:
Error: Transform 
failed with 1 error:
C:/Users/iulia/travel
ai_deals/src/componen
ts/ui/Select.jsx:15:1
9: ERROR: Expected 
identifier but found 
"\"components.ui.Sele
ct.select_an_option\"
"
    at 
failureErrorWithLog (
C:\Users\iulia\travel
ai_deals\node_modules
\esbuild\lib\main.js:
1651:15)
    at C:\Users\iulia
\travelai_deals\node_
modules\esbuild\lib\m
ain.js:849:29
    at responseCallba
cks.<computed> (C:\Us
ers\iulia\travelai_de
als\node_modules\esbu
ild\lib\main.js:704:9
)
    at 
handleIncomingPacket 
(C:\Users\iulia\trave
lai_deals\node_module
s\esbuild\lib\main.js
:764:9)
    at Socket.readFro
mStdout (C:\Users\iul
ia\travelai_deals\nod
e_modules\esbuild\lib
\main.js:680:7)
    at Socket.emit 
(node:events:518:28)
    at addChunk (node
:internal/streams/rea
dable:561:12)
    at readableAddChu
nkPushByteMode (node:
internal/streams/read
able:512:3)
    at Readable.push 
(node:internal/stream
s/readable:392:5)
    at 
Pipe.onStreamRead (no
de:internal/stream_ba
se_commons:189:23)[3
9m
